Fix gaps on the card-section

--- a/css/card-section.css
+++ b/css/card-section.css
@@ -2,14 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     height: 80vh;
-    gap: 5vh;
+    gap: 10vh;
 }
 
 .card-section-header {
-    height: 10vh;
-    margin: 1em;
+    padding: 0;
     font-size: 36px;
     color: #1f2937;
     font-weight: bolder;
